# libMVRgdtf

./: .autorc  .autorc.json  .gitignore  .gitmodules  .npmrc  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LICENCE.md  Makefile  Makefile.defs  PULL_REQUEST_TEMPLATE.md  README.md  RunBuildMA.bat  Virtual-res-issue-test-file.xml  buildAllConfigs_Win.bat  buildLib_Win.bat  change-package-name.js  copyFrameworks.py  install.sh  libVectorworksMvrGdtf.sln  libVectorworksMvrGdtf.vcxproj  libVectorworksMvrGdtf.vcxproj.filters  libVectorworksMvrGdtfUnitTestWinDLLTXString.vcxproj  main.js  package-lock.json  package.json  runMSBuild.bat  runMSBuild_lib.bat  runMSBuild_lib_ma.bat  runMSBuild_xerces.bat  runMSBuild_xerces_ma.bat  runMSUnitTest.bat  stdafx.cpp  unittest1.cpp
.github/: config.yml
.github/workflows/: artifact-os-build.yml  artifact.yml  build-dev-win.yml  build-linux-artifact.yml  build-linux.yml  build-options.yml  build-static-linux.yml  build-static-mac.yml  build-static-win.yml  build-static.yml  build-win32-artifact.yml  linux-unittest.yml  linux-unittest_noxerces.yml  package-dev-win.yml  push.yml  release.yml  test-asan.yml  test.yml
DLLUnitTest/: DLLUnitTest.cpp  DLLUnitTest.vcxproj  DLLUnitTest.vcxproj.filters
UnitTestDLL/: UnitTestDLL.cpp  UnitTestDLL.vcxproj  UnitTestDLL.vcxproj.filters
UnrealPluginExample/: MyPlugin.uplugin
backup/: dllmain.cpp  libVectorworksMvrGdtf.sln  libVectorworksMvrGdtf.vcxproj  libVectorworksMvrGdtf.vcxproj.filters
examples/gdtf_share/: example_client.cpp
gdtf_share_test/: main.cpp
libVectorworksMvrGdtf.so.dSYM/Contents/: Info.plist
libVectorworksMvrGdtf.vcx/: libVectorworksMvrGdtf.vcxproj  libVectorworksMvrGdtf.vcxproj.filters  libVectorworksMvrGdtfTestApp.vcxproj  libVectorworksMvrGdtfTestApp.vcxproj.filters
libVectorworksMvrGdtf.xcodeproj/: project.pbxproj
libVectorworksMvrGdtf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mdns_cpp/: CMakeLists.txt
mdns_cpp/example/: query.cpp  service.cpp
mdns_cpp/src/: logger.cpp  mdns.cpp  mdns.h  utils.cpp
scripts/: build.sh  build_xerces.py  gen_xerces.py  json-updater.js
share/: Makefile
shared/: Makefile  Makefile.defs
src/: BasicMath.X.h  CGdtfDMXPersonality.cpp  CGdtfDMXPersonality.h  CGdtfFTRDM.cpp  CGdtfFTRDM.h  CieColor.cpp  CieColor.h  FeedbackDispatcher.cpp  FeedbackDispatcher.h  FolderSpecifiers.h  GDTFManager.cpp  GDTFManager.h  GSDebug.cpp  GSDebug.h  GSString.X.cpp  GSString.X.h  GSString.cpp  GSString.h  GSTypes.h  GSUtil.cpp  GSUtil.h  GdtfError.cpp  GdtfError.h  HashManager.cpp  HashManager.h  MCCoordTypes.cpp  MCCoordTypes.h  MCFloat.cpp  MCFloat.h  MCMatrix.cpp  MCMatrix.h  ModuleMain.cpp  RGBColor.cpp  RGBColor.h  SceneDataExchange.cpp  SceneDataExchange.h  StdHeaders.h  UUID.cpp  UUID.h  Utility.cpp  (+15 more)
src/Implementation/: CAlignmentImpl.cpp  CAlignmentImpl.h  CClassImpl.cpp  CClassImpl.h  CConnectionImpl.cpp  CConnectionImpl.h  CCustomCommandImpl.cpp  CCustomCommandImpl.h  CGdtfActivationGroup.cpp  CGdtfActivationGroup.h  CGdtfArtNet.cpp  CGdtfArtNet.h  CGdtfAttribute.cpp  CGdtfAttribute.h  CGdtfBreak.cpp  CGdtfBreak.h  CGdtfCRI.cpp  CGdtfCRI.h  CGdtfCRIGroup.cpp  CGdtfCRIGroup.h  CGdtfColorSpace.cpp  CGdtfColorSpace.h  CGdtfConnector.cpp  CGdtfConnector.h  CGdtfDMXPersonality.cpp  CGdtfDMXPersonality.h  CGdtfDmxChannel.cpp  CGdtfDmxChannel.h  CGdtfDmxChannelFunction.cpp  CGdtfDmxChannelFunction.h  CGdtfDmxChannelSet.cpp  CGdtfDmxChannelSet.h  CGdtfDmxLogicalChannel.cpp  CGdtfDmxLogicalChannel.h  CGdtfDmxMode.cpp  CGdtfDmxMode.h  CGdtfDmxProfile.cpp  CGdtfDmxProfile.h  CGdtfDmxRelation.cpp  CGdtfDmxRelation.h  (+114 more)
src/Include/: GDTFPrefix.h  IMediaRessourceVectorInterface.h  VectorworksMVR.h
src/Interface/: IFileIdentifier.h  IFolderIdentifier.h  IStdFile.h  IXMLFile.h  IZIPFile.h  IZIPFileBuffer.h
src/Prefix/: CommonPrefix.h  StdAfx.h  StdHeaders.cpp
src/Wrapper/: FileIdentifier.cpp  FileIdentifier.h  FilingWrapper.cpp  FilingWrapper.h  FolderIdentifier.cpp  FolderIdentifier.h  PluginResource.h  RawOSFileimpl.cpp  RawOSFileimpl.h  SDKImpl.cpp  SDKImpl.h  TDQuickDraw.cpp  TDQuickDraw.h  UTranslateFiles.cpp  ZIPFileBuffer.cpp  ZIPFileBuffer.h  ZIPFileImpl.cpp  ZIPFileImpl.h
src/XMLLib/: ErrorHandler.cpp  ErrorHandler.h  TaggingDOMParser.cpp  TaggingDOMParser.h  XMLCore.Xerces.cpp  XMLCore.Xerces.h  XMLFileImpl.cpp  XMLFileImpl.h  XMLFileNodeImpl.cpp  XMLFileNodeImpl.h  XercesSupport.h
src/mdns/: mdns.cpp
src/mvrxchange/: CMVRxchangeService.cpp  CMVRxchangeService.h  CTaskQueue.cpp  CTaskQueue.h  mvrxchange_client.cpp  mvrxchange_client.h  mvrxchange_dynamic_buffer.cpp  mvrxchange_dynamic_buffer.h  mvrxchange_message.cpp  mvrxchange_message.h  mvrxchange_prefix.h  mvrxchange_server.cpp  mvrxchange_server.h  mvrxchange_session.cpp  mvrxchange_session.h  mvrxchange_websocket.cpp  mvrxchange_websocket.h
src/rapidxmlsupport/: XMLFileImpl.cpp  XMLFileImpl.h  XMLFileNodeImpl.cpp  XMLFileNodeImpl.h  mvr_xml_impl.h  tinyxml2.cpp  tinyxml2.h
src/sha256/: md5.cpp  md5.h  sha256.cpp
unittest/: ChannelFunctionStartTest.cpp  ChannelFunctionStartTest.h  CrashFileOpen.cpp  CrashFileOpen.h  CustomCharTest.cpp  CustomCharTest.h  CustomColorSpaceTest.cpp  CustomColorSpaceTest.h  DmxChannelSetBug.cpp  DmxChannelSetBug.h  DmxChannelSetFormating.cpp  DmxChannelSetFormating.h  DmxValueBug.cpp  DmxValueBug.h  EmptyAttributeTest.cpp  EmptyAttributeTest.h  EmptyAttributeTest2.cpp  EmptyAttributeTest2.h  EmptyAttributeTest3.cpp  EmptyAttributeTest3.h  EmptyAttributeTest4.cpp  EmptyAttributeTest4.h  EmptyGeometryUnitTest.cpp  EmptyGeometryUnitTest.h  GdtfBufferTest.cpp  GdtfBufferTest.h  GdtfBufferWrite.cpp  GdtfBufferWrite.h  GdtfDmxUnittest.cpp  GdtfDmxUnittest.h  GdtfFunctionModeMaster.cpp  GdtfFunctionModeMaster.h  GdtfLineNumberParseErrorTest.cpp  GdtfLineNumberParseErrorTest.h  GdtfRefreshBufferTest.cpp  GdtfRefreshBufferTest.h  GdtfUnittest.cpp  GdtfUnittest.h  GdtfUnittestHandler.cpp  GdtfUnittestHandler.h  (+27 more)
unittest/files/: BugInChannelSetDmxJumps.gdtf  BugInDmxWithHex.gdtf  CrashWhileOpen.gdtf  WrongDmxValue.gdtf  XMLBroken.gdtf  (+11 more)
(+58 files in other folders)
